# originations-fastapi

./: .gitignore  First Diagram.drawio  README.md  deploy.sh  dockerfile  local.sh  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
infra/: .terraform.lock.hcl  avro_to_bigquery.py  iam.tf  main.tf  policy_rules.tf  pubsub.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infra/.terraform/: environment  terraform.tfstate
infra/.terraform/modules/: modules.json
infra/functions/: avro_to_bigquery.py
infra/lending_originations/: application_request.tf  main.tf  phase_outcomes.tf  policy_rule_results.tf  risk_pricing_assigned.tf  variables.tf
infra/lending_originations/schemas/: application_request.json  phase_outcomes.json  policy_rule_results.json  risk_pricing_assigned.json
originations/: main.py
originations/config/: config.py
originations/dependancies/: auth.py
originations/domain/: application_orchestrator.py
originations/domain/affordability/: affordability_calculator.py
originations/domain/credit_variables/: credit_variable_calculator.py
originations/domain/outcomes/: phase_outcomes.py  result.py
originations/domain/policy/: policy_rule.py  policy_rules_runner.py
originations/domain/pricing/: config.py  pricing.py
originations/domain/risk_segment_assigner/: config.py  risk_segment_calculator.py
originations/enums/: enums.py  policy.py
originations/middleware/: context.py
originations/models/: application.py  credit_variables.py  errors.py  exceptions.py  past_triggers.py  quotes.py  request.py  sqlmodels.py  submission_request.py
originations/quoter/: orchestrator.py
originations/quoter/domain/: prevetting.py
originations/resumer/: handler.py
originations/router/: routes.py
originations/schemas/: loader.py
originations/services/applicant/: hash.py  service.py
originations/services/authentication/: api_authentication.py
originations/services/cloudsql/: config.py  connection.py  engine.py  initialize.py  migrate.py
tests/: test_request_class.py
(+49 files in other folders)
